--- a/postgraduate/word/simple-word/markdown/p15-p17.md
+++ b/postgraduate/word/simple-word/markdown/p15-p17.md
@@ -22,7 +22,7 @@
     - warning n. 警告，告诫
 - wealth
     - n. 财富，丰富
-    - unfair wealth distribution 
+    - unfair wealth distribution
     - wealthy
         - A few wealthy people will own all the capital(资本).
 - alone
@@ -214,10 +214,10 @@
         - The church reminded worshippers(信徒) that their souls(灵魂) were in danger.
     - dangerously adv. 危险地
 - diet
+    - n. 日常饮食； vi. 节食
     - et- 小东西
         - wallet 钱包
         - bullet 子弹
-    - n. 日常饮食； vi. 节食
     - dietary adj. 与饮食相关的，饮食的
     - Mr.Song has studied the <u>diet/dietary</u> habits of 50000 men.
 - double
@@ -458,11 +458,12 @@
 - column
     - n. 专栏；圆柱
     - column chart 柱状图
-    - ...match each of the numbered items in the left column to its corresponding(相应的) information in the right column.
+    - ...match each of the numbered items in the left column to its corresponding(相应的) information in the right
+      column.
 - crop
     - n. 庄稼；收成； vt. 有收成
     - vt. 有收成
-        - the maximum yield(n. 产量) that can be cropped from a fishery(n. 渔场)... 渔业可获得的最大产量... 
+        - the maximum yield(n. 产量) that can be cropped from a fishery(n. 渔场)... 渔业可获得的最大产量...
     - crop up 猛增
         - cases began to crop up in New York city...
 - harm
