--- a/postgraduate/word/simple-word/markdown/p21-p23.md
+++ b/postgraduate/word/simple-word/markdown/p21-p23.md
@@ -3,50 +3,51 @@
 - touch
     - vt. 触摸；触动；接触
     - touch on 触碰；涉及
-        - McAfee indeed touched on this point in their book.
+        - McAfee indeed <u>touched on</u> this point in their book.
     - in touch with 与...相接触/ 联系
-        - Healthy optimism means being in touch with readily.
+        - Healthy optimism means being <u>in touch with</u> readily.
 - transportation
     - n. 交通工具，运输
-    - transport  v./n. 交通；运输
+    - transport v./n. 交通；运输
     - port 港口
         - export 出口
         - import 进口
     - 交通工具
-        - Shippers have the option of switching to truchs or other forms of transportation.
+        - Shippers(货主) have the option of switching to trucks or other forms of transportation.
     - 运输
-        - New research on transportation biofuels（生物燃料） is already under way.
+        - New research on transportation biofuels(生物燃料) is already under way.
 - trap
-    - tra- 拖着
     - n. **陷阱**；圈套；困境； vt. 设陷阱捕捉；使中圈套
+    - tra- 拖着
     - 陷阱
-        - Thus poor countries might not be able to escape their poverty traps.
+        - Thus, poor countries might not be able to escape their poverty(贫困) traps.
     - 设陷阱捕捉
         - The researchers trapped the robots in cages.
 - traveler
     - n. 旅行者，游客
 - version
-    - n. 版本；译本；说法
+    - n. **版本；译本**；说法
     - conversation n. 谈话
     - university n. 大学
 - witness
     - n. 目击者；证据； vt. 目击；见证
-    - Europe was witnessing the passing of the religious drama.
+    - Europe was witnessing the passing of the religious(宗教) drama(戏剧).
 - manager
     - n. 经理；经纪人
     - **manage** v. 经营，管理；设法做
-        - manage to do sth. 设法做某事（取得成功）
+        - manage to do sth. 设法做某事（并取得成功）
         - try to do （尚未取得成功）
-            - We managed to reach the top of the mountain，and half an hour later we began to ascend/descend/decline/plunge.
+            - We managed to reach the top of the mountain，and half an hour later we began to <u>ascend(提升, asc)
+              /descend(下降, desc)/decline(下降)/plunge(暴跌)</u>.
     - management n. 经营，管理
 - aid
     - n./vt. 帮助（官方）
-    - Bolivar had received aid from Haiti...
+    - Bolivar had received aid from Haiti(海地)...
     - aide n. 助手
 - attack
-    - v./n. 袭击；抨击； n. （疾病）突然发作
+    - v./n. 袭击；抨击； n. (疾病)突然发作
     - 袭击；抨击
-        - Labour is under attack for opposing development.
+        - Labour(劳动党) is under attack for opposing development.
     - heart attack 心脏病发作
 - banker
 - barber
@@ -55,58 +56,67 @@
 - brand
     - n. 烙印，**商标** ；vt. 打烙印于；加商标于
     - 加标签于
-        - We hail（夸耀） them as Americans，or brand them as aliens.
+        - We hail(夸耀) them as Americans, or brand them as aliens(外星人, 对应 Americans，即外国人). 我们称他们为美国人，或称他们为外国人
     - brandy n. 白兰地
 - bus
 - cash
-    - n. 钱，现款； vt. 把..兑现
-    - cashless  没有现金的
-    - 把..兑现
+    - n. 钱，现款； vt. 把...兑现
+    - cashless 没有现金的
+    - 把...兑现
         - It takes several days before a check is cashed.
             - check n. 支票； v. 检查
 - circuit
-    - circu- 圈，环
     - n. 电路，线路；巡回路线；环行
+    - circu- 圈，环
     - A break in the circuit caused the lights to go out.
     - circuit judge 巡回法官
-    - federal circuit 联邦巡回法院
+    - Federal Circuit 联邦巡回法院
 - client
     - n. 客户；委托人
 - clothes
-    - n.（pl.） 衣服，服装
-    - 单复数同形；前方不能加a/an/数词
-        - this clothes/ these clothes
+    - n. (pl.) 衣服，服装
+    - 单复数同形
+        - this/these clothes
+        - I need to buy some clothes.
+    - 前方不能加a/an/数词
     - cloth 布
         - Clean the windows with a soft cloth.
     - clothing n. 衣服总称
+        - We need warm clothing for the winter.
 - complaint
     - n. 抱怨；诉苦
-    - Students have voiced their complaints about homework.
+    - Students have <u>voiced their complaints</u> about homework.
+        - voice one's complaint
 - correct
     - adj. 正确的，对的； vt. 改正，纠正
-    - 正确的
-        - Do not attempt to compose（撰写）a perfectly correct draft the first time around.
+    - adj. 正确的
+        - Do not attempt(尝试) to compose(撰写) a perfectly correct draft(n. 草稿) the first time around.
     - 纠正
-        - Dickens wrote to the artist and asked him to correct a drawing.
+        - Dickens wrote to the artist and asked him to correct(v.) a drawing.
     - correctly adv. 正确地
     - incorrect adj. 不正确的；不准确的
     - incorrectly adv. 不正确地；错误地
 - cycle
     - n. 循环；周期；
-    - These brands have hijacked（劫持）fashion cycle.
-    - bicycle 自行车
+    - These brands have hijacked(劫持) fashion cycle. 这些品牌已经操控了时尚周期
+    - bicycle n. 自行车
 - differently
     - adv. 不同地；相异地
 - drama
     - n. 戏剧；剧本；戏剧性事件
-    - ... the drama was a form of literature which gave glory to Greece and Roma...
+    - ...the drama was a form(形式) of literature(文学) which gave glory(荣耀) to Greece(希腊) and Roma(罗马)...
+      这种戏剧是一种文学形式，它使希腊和罗马获得荣耀
     - dramatic adj. 戏剧性的；巨大的
         - The same dramatic technological changes ...have also increased the risk...
 - feed
     - vt. 喂养；为...提供食物
-    - The income to feed yourself and your family has disappeared.
+    - The income(收入) to feed yourself and your family has disappeared(消失了).
 - finish
     - v. 完成，结束
+    - fin- 结束，范围
+        - finally
+        - fine
+        - final
 - fishery
     - n. 渔场
 - fun
@@ -114,18 +124,19 @@
 - green
     - adj. 绿色的；缺乏经验的
 - helpful
-- laughter
+- laughter 笑声
 - listener
-- mutiple
+- multiple
     - adj. 复合的；多种多样的
-    - multiform 多样的
+    - multi- 多
+        - multiform 多样的
 - muscle
     - n. 肌肉；力量；实力；体力
 - narrow
     - adj. 狭窄的；狭隘的；勉强的； v. 使变窄；缩小
-    - narrow victory 勉强胜利
     - a narrow concept 一个狭隘的概念
-    - 缩小
+    - narrow victory 勉强胜利
+    - v. 缩小
         - The gap must be narrowed.
 - nineteen
 - page
@@ -140,45 +151,50 @@
     - repeatedly adv. 一再，再三
 - retail
     - v./n. 零售；v. 详说，述说
-    - detail 细节
+    - It originally retailed at $23.5.
+    - retailer n. 零售商
+    - detail n. 细节
 - scene
     - n. 场面；情景；现象
-    - The team's victory produced scenes of joy all over the country.
+    - The team's victory(胜利) produced scenes of joy(喜悦) all over the country.
 - sea
-    - n. 海；海洋
+    - n. 海；海洋(靠近陆地的)
+    - ocean
 - tip
     - n. 末端；小费；**小建议**；vt. 使倾斜，倒入；给...小费
     - root tips 根末端
-    - to insure promptness 保证服务迅速
+    - to insure promptness 保证服务迅速 -> 小费
     - 小建议
-        - give them some tips for the tour
+        - give them some tips for the tour(旅游)
 - unusual
     - adj. 不平常的，少有的
+    - usual adj. 平常的
     - unusually adv. 特别地，极，非常
 - winter
     - n. 冬季
 - pleasure
     - n. 高兴，愉快
-    - Happiness is more than pleasure without pain.
+    - Happiness is <u>more than pleasure</u> without pain.
         - more than + n. 不仅仅
-        - more than + 数字  超过
+        - more than + 数字 超过
 - addition
     - n. 加；加法；增加物
     - in addition 此外，进一步说（不同方面的递进）
+        - indeed adv. 真正地，当然；确实（同一方面递进）
     - additional adj. 额外的；附加的
 - weak
-    - adj. **虚弱的；能力弱的**灯光的微弱；稀薄的
-    - who are physically weak or crippled（跛的）
+    - adj. **虚弱的；能力弱的** 灯光的微弱；稀薄的
+    - who are physically weak or crippled(跛的)
     - the weak lecture 糟糕的演讲
-    - weaken  v. 使虚弱；减弱
+    - weaken v. 使虚弱；减弱
         - ...weaken big tech companies
     - weakness n. 虚弱
     - week 星期，周
-    - wake  v. 醒来；唤醒
+    - wake v. 醒来；唤醒
 - pair
     - n. 一双；一对；一副； v. 配对
-    - pairs of unrelated friends
-    - 配对
+    - pairs of unrelated(无关) friends
+    - v. 配对
         - pairing them with better-behaved classmates
 - storage
     - n. 储存，保管
@@ -194,36 +210,43 @@
 - restaurant
     - n. 餐馆；饭店
 - boring
-    - adj. 没趣的；令人厌倦的（修饰物）
-    - bored adj. 厌倦的；烦闷的（修饰人）
+    - adj. 没趣的；令人厌倦的
+    - bored adj. 厌倦的；烦闷的
+    - boring vs bored
+        - boring 修饰物 boring game
+        - bored 修饰人
 - cry
     - vi. 哭；vt. 叫喊，大喊大叫
     - cry out for 急需
-        - The endless legal battles cry out for Congress to act.
+        - The endless(无尽) legal battles <u>cry out for</u> Congress(国会) to act.
     - rallying cry 集结号角
 - red
 - club
 - telescope
     - n. 望远镜
+    - tele- 远
+        - telephone
 - chemical
     - adj. 化学的； n. 化学制品
-    - ...a woman's increased dose of stress chemicals...
+    - ...a woman's increased dose of stress chemicals... 女性体内压力化学物质的增加
 - nine
 - mood
     - n. 心情，情绪
     - emotion n. 情绪
+        - mood == emotion
     - doom n. 厄运
 - pink
     - adj. 粉红色的，桃红色的；n. 粉红色
     - pin n. 针
     - pink slip 解雇通知单
 - toy
-    - n. 玩具；vi. 漫不经心地考虑（toy with）；摆弄
+    - n. **玩具**；vi. 漫不经心地考虑（toy with）；摆弄
+    - He toys with paper.
     - 一个男孩boy，玩着玩具toy，非常高兴joy
 - naturally
     - adv. 顺理成章地；自然地；当然地
         - We can manage the health problems that come naturally with age.
-    - nature n. 自然；本质
+    - nature n. 自然；**本质**
         - by its nature 由其本质
 - heat
     - n. 热；炎热；热度； v. 加热
@@ -233,6 +256,8 @@
     - n. 电话； v. 打电话
 - audience
     - n. 听众，观众，读者
+    - audi- 听
+        - audit n. 审计，审查
     - Who are your most important audiences?
 - satellite
     - n. 卫星；人造卫星
@@ -243,63 +268,72 @@
 - vitamin
     - n. 维生素
     - vit- 生命
-    - **vital** 生死攸关的，至关重要的
+    - **vital** adj. 生死攸关的，至关重要的
 - spouse
     - n. 配偶
+    - In Cambodia(柬埔寨), the choice of a spouse is a complex one for the young male.
+- trip
+- request
 - unable
+    - adj. 未能，无法
 - March
     - 三月
 - cap
     - n. 帽子；盖，罩；**最高限额**；vt. 覆盖；**胜过，超过**
     - 最高限额
-        - ...It the cap were lifted，increasing DDP by 0.6%.
+        - ...if the cap were lifted(上限), increasing GDP by 0.6%. 如果取消上限，GDP将增加0.6%
     - 胜过
         - What an amazing story. Can anyone cap that？
 - euro
     - n. 欧元
+    - Europe n. 欧洲
 - reporter
     - n. 记者
-    - report  n./v. 报道；报告
-        - We often hear media reports that a hacker has been able to access a computer database.
+    - report n./v. 报道；报告
+        - We often hear media reports that a hacker(黑客) has been able to access a computer database.
 - soldier
     - n. 士兵，军人
 - stuff
-    - n. 原料，材料=thing； vt. 填进，塞满
+    - n. 原料，材料(== thing)； vt. 填进，塞满
     - stuffed animals 动物玩偶
 - diary
     - n. 日记本
+    - di- 日子
+        - diet n. 日常饮食； vi. 节食
 - pretty
     - adv. 相当，很； adj. 漂亮的
-    - a pretty girl
-    - Most folks still feel pretty comfortable.
-- Grammar
+    - a pretty girl(n.)
+    - Most folks(伙计们) still feel pretty comfortable(adj.).
+- grammar
     - n. 语法（书）
     - gram- 刻；写
         - program n. 程序
-        - diagram n. 图标
+        - diagram n. 图表
 - cool
     - adj. 凉爽的，冷淡的
 - dinner
     - n. 正餐，主餐
 - radio
     - n. 无线电广播
+    - rad- 根
+        - eradicate v. 根除
     - The information was transmitted by radio.
 - evil
     - adj. 邪恶的，有害的； n. 邪恶，罪恶
 - lecture
-    - lect=less-说
     - n./v. 演讲，训诫
-    - He reminds himself that not every lecture can be a Nobel winner.
+    - lect- == less- 说
+    - He reminds himself that not every lecture can be a Nobel(诺贝尔) winner.
 - slowly
     - adv. 慢速的
 - film
     - n. 电影；胶卷（正式）
-    - movie 电影
+    - movie n. 电影
 - thank
-    - vt. 感谢； n.(pl.) 感谢
+    - vt. 感谢； n. (pl. thanks) 感谢
 - twice
     - adv. 两倍；两次
-    - Cats sleep twice as people.
+    - Cats sleep twice as much as people.
 - pull
     - v. 拉
 - closely
@@ -307,7 +341,7 @@
 - rush
     - vt. 匆忙的；冲
     - rush to 急忙做
-        - The TSA（运输管理局）is now rushing to get new screeners（安检人员）.
+        - The TSA(运输管理局) is now <u>rushing to</u> get new screeners(审查员 -> 安检人员).
 - arrival
 - lunch
 - unknown
@@ -315,24 +349,33 @@
 - meat
     - n. 肉
 - summer
+    - n. 夏天
 - onto
-    - prep. 到...上（动态）
+    - prep. 到...上
+    - on vs onto
+        - on 静态
+        - onto 动态
 - introduction
     - n. 介绍，引言
     - introduce v. 引进，引言；介绍
-        - produce 生产
-        - reduce 减少
-        - introduce into 
-            - The gardens of the homeless introduce form into an urban environment.
+        - produce v. 生产
+        - reduce v. 减少
+        - introduce into
+            - The gardens of the homeless <u>introduce form into</u> an urban environment.无家可归者的花园为城市环境引入了形式
 - motorist
     - n. 驾车者，开车的人
+    - mot- 动
+        - motor n. 发动机
+        - motion n. 移动
 - guard
     - n. 卫兵； vt. 守卫；看守
     - guardian n. 保护者；守卫者
-    - historian 历史学家
+    - -ian 专业的人
+        - historian 历史学家
 - genius
-    - gen- 产生
     - n. 天才，天赋
+    - gen- 产生
+        - generate
 - airport
     - n. 机场，航空港
 - table
@@ -344,9 +387,9 @@
 - quantity
     - n. 量，数量
     - quality n. 质量；品质
-    - a large quantity of clothes 大量衣服
-    - large quantities of CO2 大量的二氧化碳
-    - a quantity of sth./quantities of sth. 一些，一些列（sth. 可不可数都可以）
+        - **a quantity of sth./quantities of sth.** 一些，一系列（sth. 可不可数都可以）
+            - a large quantity of clothes 大量衣服
+            - large quantities of CO2 大量的二氧化碳
     - quantitative adj. 量的；定量的
         - We need to do some quantitative analysis of the drugs.
 - ten
@@ -355,7 +398,7 @@
 - visitor
 - topic
     - n. 题目；话题；主题
-    - topic出现在阅读题中往往是主旨题的标志
+    - topic 出现在阅读题中往往是*主旨题*的标志
 - bag
 - bottom
     - n. 底部；末尾；臀部； adj. 最低的
