feat: add 007 008 write

--- a/postgraduate/write/001-020_letter.md
+++ b/postgraduate/write/001-020_letter.md
@@ -1,7 +1,7 @@
 ## 002
 
 Dear Bob,<br>
-&emsp;&emsp;&emsp;&emsp;I have just arrived at my home from the airport. As I sit down at my desk, I just want to write a letter to you to thank you for your warm reception in the culturl exchange program. You and your family left a deep impression upon me. Indeed, the program is one of the most wonderful memories in my life.<br>
+&emsp;&emsp;&emsp;&emsp;I have just arrived at my home from the airport. As I sit down at my desk, I just want to write a letter to you to thank you for your warm reception in the cultural exchange program. You and your family left a deep impression upon me. Indeed, the program is one of the most wonderful memories in my life.<br>
 &emsp;&emsp;&emsp;&emsp;I remember you mentioned wanting to travel in China. Well, if you come to China, You will be warmly welcomed, and it will be my pleasure to be your guide here. If you would like, send me a list beforehand of the places you would like to visit.<br>
 &emsp;&emsp;&emsp;&emsp;Please give my best regards to your family.<br>
 <p align="right">Yours,</p>
@@ -21,7 +21,7 @@ Dear friends,<br>
 Dear Sir or Madam,<br>
 &emsp;&emsp;&emsp;&emsp;I bought an electronic dictionary from your online shore on January 1st, but after using it for a short period of time, I found it has some problems.<br>
 &emsp;&emsp;&emsp;&emsp;To begin with, the battery needs recharging after a mere 2 hours of use. This means that I need to carry my charger with me when I go out for a day. In addition, the buttons on the electronic dictionary are so small that it is nearly impossible to type anything with them. Personally, I find this to be completely unacceptable.<br>
-&emsp;&emsp;&emsp;&emsp;Therefore, I would like either to change for another model that works better or a full refund. You help is greatly appreciated.<br>
+&emsp;&emsp;&emsp;&emsp;Therefore, I would like either to change for another model that works better or a full refund. Your help is greatly appreciated.<br>
 <p align="right">Yours sincerely</p>
 <p align="right">Zhang Wei</p>
 
@@ -29,7 +29,7 @@ Dear Sir or Madam,<br>
 
 Dear Professor Smith<br>
 &emsp;&emsp;&emsp;&emsp;On behalf of the Talents English Speech Contest Committee, I'm writing to invite you to be our new judge.<br>
-&emsp;&emsp;&emsp;&emsp;As the core of our Foreign Culture Festival. This school-wide contest is to be held in the students auditorium on May 12(next Sunday) and we believe that you can give our competitors some enlightening comments as both a native-English speaker and a knowledgeable professor. Specifically, the event will start at around 7p.m. and last for two hours at most. At the end of it, we will have some hand-made presents for each judge and competitor.<br>
+&emsp;&emsp;&emsp;&emsp;As the core of our Foreign Culture Festival. This school-wide contest is to be held in the students auditorium on May 12(next Sunday) and we believe that you can give our competitors some enlightening comments as both a native-English speaker and a knowledgeable professor. Specifically, the event will start at around 7:00 p.m. and last for 2 hours at most. At the end of it, we will have some hand-made presents for each judge and competitor.<br>
 &emsp;&emsp;&emsp;&emsp;Once again, we sincerely hope you can be the judge for our competition. 
 <p align="right">Yours sincerely,</p>
 <p align="right">Li Ming</p>
@@ -43,4 +43,23 @@ Dear Professor Cook,<br>
 <p align="right">Yours sincerely,</p>
 <p align="right">Li Ming</p>
 
+## 007
+
+Dear Professor Smith,<br>
+&emsp;&emsp;&emsp;&emsp;I am looking forward to my travel to the United States and visiting you in Harvard University.<br>
+&emsp;&emsp;&emsp;&emsp;Unfortunately, I have recently been diagnosed with a serious ear infection which will require surgery on the same day as my departure. I am sorry to say that I will therefore not be able to make the travel plan. If possible, I would like to postpone the travel plan to another day later this year. I promise that such a situation does not usually happen, and apologize for any inconvenience this may cause you.<br>
+&emsp;&emsp;&emsp;&emsp;Please excuse me for not being able to inform you of my situation sooner. Your prompt attention to my suggestion would be highly appreciated.<br>
+
+<p align="right">Yours sincerely,</p>
+<p align="right">Li Ming</p>
+
+## 008
+
+Dear Paul,<br>
+&emsp;&emsp;&emsp;&emsp;I'm glad to hear from you. How have you been these days? Since you're going to present an oral report on an ancient Chinese scientist, Bi Sheng is an ideal candidate.<br>
+&emsp;&emsp;&emsp;&emsp;In the middle of the 11 century during the Song Dynasty, Bi Sheng invented the movable type printing technique. He mainly used clay type, which saved much time and money compared with block printing. After that, the movable type printing technique was widely promoted. China's printing technique was spread to the Arabic region during the Yuan Dynasty and then to Africa and Europe. Printing provided a significant condition for the European science to develop rapidly after the long night of the medieval period and the emergence of the Renaissance.<br>
+&emsp;&emsp;&emsp;&emsp;I hope you find the above recommendations useful. Looking forward to your successful presentation.<br>
+
+<p align="right">Yours,</p>
+<p align="right">Li Ming</p>
 
