--- a/postgraduate/word/simple-word/markdown/p21-p23.md
+++ b/postgraduate/word/simple-word/markdown/p21-p23.md
@@ -183,7 +183,7 @@
         - indeed adv. 真正地，当然；确实（同一方面递进）
     - additional adj. 额外的；附加的
 - weak
-    - adj. **虚弱的；能力弱的** 灯光的微弱；稀薄的
+    - adj. **虚弱的；能力弱的**； 灯光的微弱；稀薄的
     - who are physically weak or crippled(跛的)
     - the weak lecture 糟糕的演讲
     - weaken v. 使虚弱；减弱
