--- a/postgraduate/word/simple-word/markdown/p1-p2.md
+++ b/postgraduate/word/simple-word/markdown/p1-p2.md
@@ -89,7 +89,7 @@
     - prep. 被, 通过, 不迟于
         - It is sponsored by 163 countries.
         - She was given a pen by her father.
-        - By most recent measures, the UK's GDP has been the envy of the Western world.
+        - By most recent measures[ˈmeʒər], the UK's GDP has been the envy of the Western world.
         - by 表示在规定时间点前完成，动作未必是持续的；until 表示时间点完成并持续做某事
             - Some of the "core skills" will change by/until 2022.
 - not
