--- a/postgraduate/word/simple-word/markdown/p15-p17.md
+++ b/postgraduate/word/simple-word/markdown/p15-p17.md
@@ -53,9 +53,9 @@
 - player
     - n. 游戏者；运动员
 - post
+    - n. **岗位**；标杆；**把...放入**
     - post- 词根：放置；邮递
     - post- 前缀：过去（+完整的单词 postgraduate）
-    - n. **岗位**；标杆；**把...放入**
     - **岗位**
         - They were looking for a CEO post.
     - **把...放入**，发布，公布
@@ -81,8 +81,8 @@
         - In his work，he attempted to show how all aspects(方面) of culture changed.
     - tempt v. 诱惑
 - annual
-    - ann- 年
     - adj. 每年的，年度的； n. 年报，年刊
+    - ann- 年
     - The new vaccine(n. 疫苗), which is different from the annual vaccine.
     - anniversary n. 周年纪念
 - cheap
@@ -119,16 +119,16 @@
     - aristo-贵族的
     - aristocratic [əˌrɪstəˈkrætɪk] 贵族的
 - secretary
-    - cert- 搞清
     - n. 秘书，大臣，部长
-    - secret adj. 秘密的，机密的 n. 秘密
-    - certain adj. 肯定
+    - cert- 搞清
+        - secret adj. 秘密的，机密的 n. 秘密
+        - certain adj. 肯定
 - shape
     - n. 外形；状态； vt. 形成，使成形
     - reshape v. 重塑；改组
 - shock
     - n. 震惊，震动
-    - No shock there, considering...
+    - <u>No shock there</u>, considering...
         - no shock there 毫不震惊的是
     - shake v. 摇
 - south
@@ -173,7 +173,7 @@
 - root
     - n. 根部 v. 生根
     - take root in 扎根于
-        - Which took root in Europe.
+        - Which <u>took root in</u> Europe.
 - screen
     - n. 屏风；**屏幕**  vt. **检查**，掩蔽，放映；甄别
     - 屏幕
@@ -193,7 +193,7 @@
     - n. 字母表
     - alpha + beta
 - arrive
-    - vi. 到达；来临 （区别reached vt.）
+    - vi. 到达；来临
     - arrive vs reach
         - reach vt.: I have reached my school.
         - arrive vi. + prep.
@@ -221,8 +221,8 @@
     - dietary adj. 与饮食相关的，饮食的
     - Mr.Song has studied the <u>diet/dietary</u> habits of 50000 men.
 - double
-    - di- 两个
     - adj. 双倍的，双重的
+    - di- 两个
     - ... agricultural(农业) production in some regions will need to nearly double to keep pace...
 - fly
     - vi. 飞； n. 苍蝇
@@ -235,7 +235,7 @@
         - present 指精心包装的礼物
         - gift 广泛的礼物
     - 天赋
-        - gifted people**s** 有天赋的种族
+        - gifted people<u>**s**</u> 有天赋的种族
 - helicopter
     - n. 直升机
 - ill
@@ -251,8 +251,8 @@
     - 标签，标记
         - mass-market(大众市场) labels such as Zara，H&M，and Uniqlo.
         - mass n. 一团; 大堆; 大量; 块; 民众; 大部分;
-    - 把...称为（label...as）
-        - Today we have a tendency(趋势) to label obesity(肥胖) as a disgrace(耻辱).
+    - label...as 把...称为
+        - Today we have a tendency(趋势) to <u>label</u> obesity(肥胖) <u>as</u> a disgrace(耻辱).
 - manner
     - n. 态度，举止；风度；方法，方式
     - man- 手
@@ -267,8 +267,8 @@
 - planet
     - n. 行星
 - plastic
-    - pla- 平
     - n. 塑料(常pl.)；adj. 塑料的
+    - pla- 平
 - regular
     - adj. 有规律的；定期的；常规的，经常的
     - 常规的
@@ -294,12 +294,12 @@
 - airline
     - n. 航线
 - burn
-    - bur- 燃烧
     - v.燃烧； n. 烧伤
+    - bur- 燃烧
     - This suggests that dimmer bulbs(暗淡) burn longer. 这表明，调暗的灯泡燃烧的时间更长
 - complain
-    - com- 共同，一起
     - vi. 抱怨，诉苦
+    - com- 共同，一起
     - People complained that buses were late and infrequent(罕见).
     - complaint n. 抱怨
         - Students have <u>voiced their complaints</u> about homework.
@@ -330,13 +330,13 @@
     - vi. 大笑
     - laughter n. 笑声
 - lesson
-    - lec- 说话
     - n. 课；**教训**；（pl.）课程
+    - lec- 说话
     - **教训**
         - We can choose to <u>look for(吸取)</u> the lesson we're meant to learn.
 - magazine
-    - mag- == mac- == mat- 揉，捏；力量
     - n. 杂志，期刊
+    - mag- == mac- == mat- 揉，捏；力量
     - imagine v. 想象; 猜测; 臆想; 认为
 - meanwhile
     - adv. 与此同时
@@ -350,8 +350,8 @@
             - She is a mean old woman.
         - mean, meant, meant, meaning
 - medicine
-    - medic- 药物
     - n. 内服药；医学
+    - medic- 药物
     - 药物
         - The program has provided enough food and medicine.
     - 医学
@@ -395,10 +395,10 @@
     - the writing/finger is on the wall 厄运即将降临
     - the Great Wall 长城
 - waste
-    - vac- 空
     - n. **浪费**，废弃物； vt.浪费
-    - vacation 假期
-    - vacuum n. 真空，v. 用真空吸尘器清扫
+    - vac- 空
+        - vacation 假期
+        - vacuum n. 真空，v. 用真空吸尘器清扫
     - n. 浪费
         - Many jobs are boring，unhealthy，and a waste of human potential(n. 潜力).
 - whom
@@ -476,7 +476,7 @@
 - jump
     - vi./n. 猛增，猛涨，跳跃
     - n. 猛增
-        - There was a big jump in the number of people...
+        - There was a big jump in the number of people... 在……方面，人数出现了大幅增长
 - kill
     - vt. 杀死
     - killer n. 杀手；杀人者
