--- a/postgraduate/word/simple-word/markdown/p18-p20.md
+++ b/postgraduate/word/simple-word/markdown/p18-p20.md
@@ -10,7 +10,8 @@
     - the Arctic 北冰洋
     - the Indian 印度洋
 - poetry
-    - n. 诗歌，诗集: This writer's poetry reflects his love of nature.
+    - n. 诗歌，诗集 [ˈpoʊətri]
+    - This writer's poetry reflects his love of nature.
     - poet n. 诗人
     - poetic adj. 诗歌的，诗的
 - railroad/railway
@@ -24,14 +25,14 @@
 - wear
     - vt. 穿；戴；面带；**磨损**
     - **磨损**
-        - The stones have been worn smoothly(顺利) by the constant flow of water.
+        - The stones have been worn(wear-wore-worn) smoothly(顺利) by the constant(持续的) flow of water.
     - wear-wore-worn
 - worry
     - v. 担心；n. 担心
     - worry about 担心
-    - People in developing countries <u>worry about</u> migration(移民).
-        - immigration 移入民
-        - emigration 移出民
+        - People in developing countries <u>worry about</u> migration(移民).
+            - immigration 移入民
+            - emigration 移出民
 - zone
     - n. 地区，区域
     - the new ultra-low(超低的) emission(排放) zone.
@@ -60,7 +61,7 @@
 - escape
     - vi. 逃跑； vt./n. 逃避，逃离
     - inescapably 不可避免的
-        - The law(法律) (the court shapes) is inescapably political.
+        - The law(法律) (the court shapes) is inescapably political. 法律（法院所塑造的法律）不可避免地具有政治性
 - fat
     - adj. 胖的；丰厚的
     - fat pay 丰厚的收入
@@ -70,27 +71,27 @@
     - heavy traffic 繁重的交通
     - heavy heart 沉重的心
     - heavy industry 重工业
-    - ... makes heavy(心情的沉重) reading for publishers...
+    - ...makes heavy(心情的沉重) reading for publishers... 对出版商来说，这是让人感到沉重的读物
 - homeless
     - adj. 无家可归的
     - the homeless 无家可归的人
 - mile
-    - mil- 千
     - n. 英里
+    - mil- 千
     - milestone n. 里程碑
 - native
-    - nat- 出生
     - adj. 出生地的；当地的；土著
+    - nat- 出生
 - north
 - obviously
     - adv. 明显地
     - **obvious**
-        - adj. 明显的
+        - adj. 明显的 [ˈɑːbviəs]
         - vi == vis- 看
         - Surely it should be obvious to the dimmest(人：笨的；物：昏暗的) executive(管理人员)...
 - quarter
-    - qua- 4
     - **n. 四分之一；一刻钟；季度；** vt. 将... 四等分
+    - qua- 4
     - 四分之一
         - a quarter of web content
     - 一刻钟
@@ -110,7 +111,7 @@
     - prep. 围绕
         - They were all sitting round the table.
     - v. 环绕...而行
-        - We rounded the island at high speed.
+        - We rounded the island at high speed. 我们高速绕行了这座岛
     - n. 回合
         - It launched(启动) a round of talks about how to save newspapers.
     - 取整数的
@@ -121,11 +122,11 @@
     - n. 卖方，销售者
 - smoke
     - n. 烟，烟尘； vi. 抽烟
-    - ...the smell(n. 气味) of smoke，which might indicate the danger of fire.
+    - ...the smell(n. 气味) of smoke，which might indicate(表明) the danger of fire.
 - solar
     - adj. 太阳的，日光的
     - sol- 太阳；一个，单独
-    - Wind and solar power accounted for more than 10 percent.
+    - Wind and solar power <u>accounted for</u> more than 10 percent.
         - **accounted for** 占...比例（后边有数字）；解释
 - strange
     - adj. 奇怪的，奇异的
@@ -138,14 +139,14 @@
 - twenty
 - unlike
     - prep. 不像，和...不同
-    - Unlike animals，we stand upright.
+    - Unlike animals，we stand upright(直立).
     - dislike v. 不喜欢
 - worst
     - adj./adv. 最坏的，最差的
     - bad, worse, worst
     - <u>It was by far(到目前为止)</u> the worst speech he had ever made.
 - athlete
-    - n. 运动员；体育家
+    - n. 运动员；体育家 [ˈæθliːt]
 - black
     - adj. 黑色的； vt. 使变黑； n. 黑色，黑色人种（pl.）
     - whites and blacks
@@ -156,7 +157,7 @@
     - adj. 繁忙的；热闹的
 - error
     - n. 错误，差错
-    - The top reason for the fake news phenomenon(现象) is "reade error".
+    - The top reason for the fake news phenomenon(现象) is "reade error". 假新闻现象的最主要原因是‘读者错误’
     - erroneous adj. 错误的
         - ...reveal(揭示) its erroneous nature(本质).
 - familiar
@@ -164,8 +165,8 @@
     - unfamiliar 不熟悉的
     - New skills and unfamiliar business models are needed too. 还需要新的技能和不熟悉的商业模式
 - final
-    - fin- 结束；范围
     - adj. 最后的；决定性的
+    - fin- 结束；范围
     - finally adv. 最终地，最后地
 - fine
     - adj. 极好的；好的；健康的； vt. 处以...罚金；n. 罚金
@@ -188,8 +189,6 @@
     - hugely adv. 极度；非常；深深地；大大地
 - newly
     - adv. 最近地
-- newly
-    - adv. 最近，新近
 - panel
     - n. 面，板；专门小组，评判小组；仪表盘
     - solar panel 太阳能面板
@@ -215,8 +214,8 @@
     - proud adj. 自豪的 be proud of
         - Stratford <u>is</u> most <u>pound of</u> its nonconformist(不墨守成规的) image.
 - province
-    - pro- 向前
     - n. 省；领域，范围
+    - pro- 向前
 - quote
     - v. 引用，n. 引文，引语
     - 引用
@@ -265,10 +264,10 @@
     - I have got a cold
 - everyday
     - adj.(+n.) 每天的，日常的
-        - Many everyday tasks take a surprising toll on the environment.
+        - Many everyday tasks <u>take</u> a surprising <u>toll on</u> the environment.
             - take toll on 对...造成损害
     - every day adv.
-        - We unconsciously(无意识的) imitate(模拟) the behavior we see ever day.
+        - We unconsciously(无意识的) imitate(模拟) the behavior we see every day.
 - fruit
     - n. 水果；**成果**
     - fruitless 没有成果的
@@ -291,7 +290,7 @@
     - sense of sadness 悲伤感
     - sense of responsibility 责任感
 - hurt
-    - vt. 使...伤心；伤害； n. s伤害
+    - vt. 使...伤心；伤害； n. 伤害
     - I have hurt her heart.
 - mode
     - n. 方式，样式
@@ -302,8 +301,8 @@
 - ought to
     - modal v. 应该
 - reply
-    - ply- 重叠
     - v./n. 回答；答复
+    - ply- 重叠
     - I am looking forward to you reply.
 - smart
     - adj. 聪明的；智能的
@@ -312,8 +311,8 @@
     - n. 软件
     - hardware n. 硬件
 - spirit
-    - spir- 呼吸
     - n. 精神
+    - spir- 呼吸
     - competitive spirit 竞争精神
         - pet- 追求
     - cooperative spirit 合作精神
@@ -323,19 +322,19 @@
 - star
 - thirty
 - urban
+    - adj. 城市的
     - urb- 城市
         - suburb adj. 城郊的
-    - adj. 城市的
-    - rural adj. 农村的
+    - rural adj. 农村的 [ˈrʊrəl]
 - wholesaler
     - n. 批发商
     - wholesale n. 批发
     - retailer n. 零售商
 - yes
 - date
+    - n. 日期；约会
     - do- 给予
         - donate v. 赠送
-    - n. 日期；约会
     - out of date 过时
         - But the discussions now seem <u>out of date</u>.
     - outdated adj. 过时的；陈旧的（在阅读题选项中经常是错误选项）
@@ -345,7 +344,7 @@
 - artist
     - n. 艺术节；美术家
 - ceremony
-    - n. 仪式，典礼 == ritual
+    - n. 仪式，典礼 == ritual [ˈserəmoʊni]
     - graduation ceremony
 - chain
     - n. 链条；**连锁店**
@@ -377,13 +376,13 @@
     - New technology has been eating jobs forever.
 - greatly
     - adv. 非常，很；大大地
-    - Social class greatly helps enrich educational experiences.
+    - Social class greatly helps enrich educational experiences. 社会阶层在很大程度上有助于丰富教育经历
 - household
     - n. 家庭； adj. 家庭的，家用的
     - family n. 家庭
 - infant
-    - fant- 说话
     - n. 婴儿； adj. 婴儿的
+    - fant- 说话
     - infancy n. 婴儿期；幼儿园
 - inside
     - prep./adv./n./adj. 里面
@@ -400,8 +399,8 @@
 - meal
     - n. 膳食；一餐；一顿饭
 - motion
-    - mot- 动
     - n. 运动；移动（不可数）
+    - mot- 动
 - neither
     - adv. 两者都不
     - neither nor 既不...也不
