--- a/postgraduate/word/simple-word/markdown/p21-p23.md
+++ b/postgraduate/word/simple-word/markdown/p21-p23.md
@@ -3,9 +3,9 @@
 - touch
     - vt. 触摸；触动；接触
     - touch on 触碰；涉及
-        - McAfee indeed <u>touched on</u> this point in their book.
-    - in touch with 与...相接触/ 联系
-        - Healthy optimism means being <u>in touch with</u> readily.
+        - McAfee indeed(确实) <u>touched on</u> this point in their book. McAfee 确实在他们的书中提到了这一点。
+    - in touch with 与...相接触/联系
+        - Healthy optimism(乐观) means being <u>in touch with</u> readily. ???
 - transportation
     - n. 交通工具，运输
     - transport v./n. 交通；运输
@@ -31,7 +31,7 @@
     - university n. 大学
 - witness
     - n. 目击者；证据； vt. 目击；见证
-    - Europe was witnessing the passing of the religious(宗教) drama(戏剧).
+    - Europe was witnessing the passing of the religious(宗教) drama(戏剧). 欧洲当时正在见证宗教戏剧的衰落/消亡
 - manager
     - n. 经理；经纪人
     - **manage** v. 经营，管理；设法做
@@ -47,7 +47,7 @@
 - attack
     - v./n. 袭击；抨击； n. (疾病)突然发作
     - 袭击；抨击
-        - Labour(劳动党) is under attack for opposing development.
+        - Labour(劳动党) is under attack for opposing(反对) development.
     - heart attack 心脏病发作
 - banker
 - barber
@@ -56,7 +56,7 @@
 - brand
     - n. 烙印，**商标** ；vt. 打烙印于；加商标于
     - 加标签于
-        - We hail(夸耀) them as Americans, or brand them as aliens(外星人, 对应 Americans，即外国人). 我们称他们为美国人，或称他们为外国人
+        - We hail(夸耀) them as Americans, or brand them as aliens(外星人, 对应 Americans，即外国人). 我们要么把他们称颂为美国人，要么把他们贴上“外来者”的标签
     - brandy n. 白兰地
 - bus
 - cash
@@ -218,7 +218,7 @@
 - cry
     - vi. 哭；vt. 叫喊，大喊大叫
     - cry out for 急需
-        - The endless(无尽) legal battles <u>cry out for</u> Congress(国会) to act.
+        - The endless(无尽) legal(法律) battles <u>cry out for</u> Congress(国会) to act.
     - rallying cry 集结号角
 - red
 - club
@@ -227,7 +227,7 @@
     - tele- 远
         - telephone
 - chemical
-    - adj. 化学的； n. 化学制品
+    - adj. 化学的； n. 化学制品 [ˈkemɪkl]
     - ...a woman's increased dose of stress chemicals... 女性体内压力化学物质的增加
 - nine
 - mood
@@ -255,7 +255,7 @@
 - telephone/phone
     - n. 电话； v. 打电话
 - audience
-    - n. 听众，观众，读者
+    - n. 听众，观众，读者 [ˈɑːdiəns]
     - audi- 听
         - audit n. 审计，审查
     - Who are your most important audiences?
@@ -270,7 +270,7 @@
     - vit- 生命
     - **vital** adj. 生死攸关的，至关重要的
 - spouse
-    - n. 配偶
+    - n. 配偶 [spaʊs]
     - In Cambodia(柬埔寨), the choice of a spouse is a complex one for the young male.
 - trip
 - request
@@ -281,7 +281,7 @@
 - cap
     - n. 帽子；盖，罩；**最高限额**；vt. 覆盖；**胜过，超过**
     - 最高限额
-        - ...if the cap were lifted(上限), increasing GDP by 0.6%. 如果取消上限，GDP将增加0.6%
+        - ...<u>if the cap were lifted(上限)(假设条件，虚拟语气（表示与现实相反的假设）)</u>, increasing GDP by 0.6%. 如果取消上限，GDP将增加0.6%
     - 胜过
         - What an amazing story. Can anyone cap that？
 - euro
@@ -320,6 +320,7 @@
     - The information was transmitted by radio.
 - evil
     - adj. 邪恶的，有害的； n. 邪恶，罪恶
+    - live -> evil
 - lecture
     - n./v. 演讲，训诫
     - lect- == less- 说
@@ -360,7 +361,7 @@
     - introduce v. 引进，引言；介绍
         - produce v. 生产
         - reduce v. 减少
-        - introduce into
+        - introduce into 引入
             - The gardens of the homeless <u>introduce form into</u> an urban environment.无家可归者的花园为城市环境引入了形式
 - motorist
     - n. 驾车者，开车的人
