--- a/postgraduate/word/simple-word/markdown/p27-p29.md
+++ b/postgraduate/word/simple-word/markdown/p27-p29.md
@@ -105,7 +105,7 @@
     - adj. 被动的，消极的
 - motive
     - n. 动机，目的
-    - Such measures have a couple of uplifting motives.
+    - Such measures[ˈmeʒər] have a couple of uplifting motives.
     - motivated v. 刺激
         - Students are hardly motivated by monthly goals.
 - taxpayer
@@ -353,7 +353,7 @@
     - adv. 相似地；类似地
     - similar adj. 相似的，类似的
         - be similar to 类似于
-        - The bills are similar to a measure recently adopted in California.
+        - The bills are similar to a measure[ˈmeʒər] recently adopted in California.
     - similarity n. 相似，类似
 - bottle
     - n. 瓶子
