--- a/postgraduate/word/simple-word/markdown/p6-p8.md
+++ b/postgraduate/word/simple-word/markdown/p6-p8.md
@@ -257,7 +257,7 @@
         - be entitle to 有资格...: They are entitled be continuance.
 - car
 - fashion
-    - v. 制定，实行: Congress should help to begin fashioning conservation measures.
+    - v. 制定，实行: Congress should help to begin fashioning conservation measures[ˈmeʒər].
 - level
     - n. 水平
     - basic level 基准
@@ -293,7 +293,7 @@
     - n. 句子，判决
     - vt. 宣判，判决: He had already sentenced five or six other defendants(被告) only to forced community service on that day.
 - recent
-    - adj.: This is why repeated measures(措施) have failed in recent years.
+    - adj.: This is why repeated measures(措施, [ˈmeʒər]) have failed in recent years.
     - recently adv. 最近
 - second
     - num. 第二
