--- a/postgraduate/word/simple-word/markdown/p9-p11.md
+++ b/postgraduate/word/simple-word/markdown/p9-p11.md
@@ -82,7 +82,7 @@
     - adv. 整洁的，干净的: You should write neatly on the ANSWER SHEET.
 - next
 - already
-    - adv. 早已，已经: The French measures have already. 法国的措施已经生效
+    - adv. 早已，已经: The French measures[ˈmeʒər] have already. 法国的措施已经生效
     - still 仍然(正在做，进程中): I am still doing my homework.
     - yet adv. 还，尚未 conj. 然而，但是(还没有开始): I have not done my homework yet.
 - bank
