--- a/postgraduate/word/simple-word/markdown/p12-p14.md
+++ b/postgraduate/word/simple-word/markdown/p12-p14.md
@@ -4,16 +4,16 @@
     - vt. 添加, 把...加起来
     - This could add value to their business in three ways.
 - article
-    - art-连接
     - n. 文章；（物品的）一件
+    - art- 连接
     - 物品的一件
-        - ...instead of Shopping alone, one article of clothing at a time（次数）. 不要只买一件衣服，一次只买一件???
+        - ...<u>instead of</u> Shopping alone, one article of clothing at a time（次数）. 不要一个人去购物，也不要一次只买一件衣服
             - instead of == rather than 而不是（选择前边而不选择后边）
 - forest
     - n. 森林
 - immediate
-    - medi-中间的
     - adj. 立即的，即刻的；直接的；紧靠的
+    - medi- 中间的
     - 立即的，马上的
         - Because electronic payments(电子支付) are immediate，they eliminate(v.消除) the float for the consumer.
     - 直接的
@@ -32,13 +32,13 @@
     - n. 数量，总额（不可数）； vi 合计
     - number 可数
     - a large amount of 大量的: a large amount of personal data.
-    - amount to 合计，总计: Our debts(债务) amount to $1000.
+    - amount to 合计，总计: Our debts(债务) <u>amount to</u> $1000.
 - earn
     - vt. 赚得，获得
     - earn their living 谋生
     - ...earned（获得） him a modest reputation 这为他赢得了一个不错的名声
     - earnings n. 薪水；工资；收入
-    - earner  n. 挣钱者
+    - earner n. 挣钱者
 - enjoy
     - vt. 享受 喜爱 +doing: enjoy reading
     - enjoyment n. 愉悦；快乐
@@ -61,22 +61,22 @@
 - store
     - vt. 储存，贮藏 n. 商店
     - 储存
-        - Many writers prudently(谨慎地) store their data on disks.（磁盘）
+        - Many writers prudently(谨慎地) store their data on disks(磁盘).
     - 商店
-        - The longer you stay in the store, the more stuff（商品，货物） you’ll see, the more you'll buy.
+        - The longer you stay in the store, the more stuff(商品，货物) you’ll see, the more you'll buy.
 - style
     - n. 风格；样式；类型
     - lifestyle 生活方式
 - teacher
-    - tech-教，授
     - n. 教师
+    - tech- 教，授
 - third
-    - num. 第三 
+    - num. 第三
     - n. 三分之一: a third, one third
     - first, second, third, fourth, fifth, sixth, seventh, eighth, nineth
 - certain
     - adj. 某一个，确定的 pron. 某些
-    - cert-搞清
+    - cert- 搞清
         - certify 证明，证实
         - certificate n. 证书，文凭
     - certainly adv. 确定，无疑
@@ -88,7 +88,7 @@
 - anyone
 - cancer
     - n. 癌症；
-    - It causes cancer in humans.
+    - It causes cancer in humans. 它会在人类中引起癌症
 - everything
 - female
     - adj. 雌的，女性的
@@ -125,14 +125,14 @@
     - hopeless adj. 没有希望的；无望的
     - hopelessly adv. 绝望地
 - mention
-    - ment-想
     - vt./n. 提及，说起；vi. 提及，说起(mention of)
+    - ment- 想
     - When mentioned (of) Dongsheng Zhang，we can think of going hiking.
 - quite
-    - adv. 相当；颇
-    - quiet adj. 安静的
+    - adv. 相当；颇 [kwaɪt]
+    - quiet adj. 安静的 [ˈkwaɪət]
 - serious
-    - adj. 严重的；重大的；严肃的；认真的
+    - adj. 严重的；重大的；严肃的；认真的 [ˈsɪriəs]
     - 认真的，严肃的（人）
         - If we are serious about ensuring that our science... 如果我们真的想确保我们的科学...
     - 严重的，重大的（物）
@@ -161,26 +161,28 @@
     - eat-ate-eaten
     - eater n. 吃...的人/动物
 - enter
-    - vt. 进入，参加，登录 vi. 进入（具体的进入）
+    - vt. 进入，参加，登录 vi. 进入
     - entry n. 进入
-    - entrance  n. 入口 v./n. 进入（抽象的进入 入学）
+    - entrance n. 入口 v./n. 进入
     - enter vs entrance
+        - enter 具体的进入
+        - entrance 抽象的进入，Case: 入学
 - male
     - adj. 男性的
     - male nurse 男护士
 - per
-    - 前缀：全部，贯穿
     - prep. 每，每一
+    - 前缀：全部，贯穿
 - road
     - n. 路，道路
     - street 道路（有商场）
 - travel
     - n. 旅行（长途）
 - upon
-    - prep. 在...上 
+    - prep. 在...上
     - upon == on
 - white
-    - adj. 白色的  n. 蛋白
+    - adj. 白色的 n. 蛋白
 - worse
     - adj./adv. 更坏的
     - bad/badly/ill-worse-worst
@@ -189,7 +191,7 @@
 - story
     - n. 故事，小说；报道
     - 报道
-        - Journalists(记者) can make political stories.
+        - Journalists(记者) can make political[pəˈlɪtɪkl] stories.
 - bird
     - n. 鸟；禽
     - rare bird 表示少有的人，奇葩
@@ -201,7 +203,7 @@
         - If you head downhill（山下）
 - score
     - n. 分数，刻痕； vt. 得分；给...评分；刻痕于 vi. 得分，记分
-    - Many people scored worse on measures of fluid intelligence. 许多人在流体智力方面的得分更差。
+    - Many people scored worse on measures[ˈmeʒər] of fluid intelligence. 许多人在流体智力方面的得分更差。
 - size
     - n. 尺寸，大小
     - assiss 评估
@@ -214,18 +216,19 @@
 - catch
     - vt. 抓住；赶上；感染；吸引；领会，听清楚
     - 吸引
-        - What is graphically(形象的) and explicitly(明确的) depicted in the simple yet eye-catching drawing is that... 在简单而引人注目的图画中，以图形和明确的方式描绘的是
+        - What is graphically(形象的) and explicitly(明确的) depicted in the simple yet eye-catching drawing is that...
+          在简单而引人注目的图画中，以图形和明确的方式描绘的是
     - 赶上 catch up
-        - while still catching up in some spheres of modern life... 在现代生活的某些领域仍在努力追赶
+        - while still <u>catching up</u> in some spheres of modern life... 在现代生活的某些领域仍在努力追赶
 - colleague
     - n. 同事
     - college
 - easily
 - exercise
-    - erc-力量
     - n. 锻炼，练习
+    - erc- 力量
 - hot
-    - adj. 热的 
+    - adj. 热的
     - hot pot 火锅
 - hundred
     - num. 百； pl. 数以百计，许多
@@ -235,23 +238,23 @@
     - hundreds of thousands of acres(亩) 数以十万计的
 - love
 - print
-    - vt. 印刷  n. 印刷品
+    - vt. 印刷 n. 印刷品
     - printer n. 打印机
 - race
-    - n. 比赛，竞争；种族  v. 赛速度；参加比赛
+    - n. 比赛，竞争；种族 v. 赛速度；参加比赛
     - 洗完 face，系上 lace，迈开 pace，参加 race
     - 速度赛
         - Park run is not a race but a time trail.
     - n. 种族
         - ease(缓和) conflicts between races and classes(阶级)
 - rest
-    - n. 其余的人或物    
+    - n. 其余的人或物
     - for the rest of us 对于我们其他的人
-    - vi. 依靠 rest on/upon 
-        - Good governance rests on an understanding of... 良好的治理建立在对...的理解之上。
+    - vi. 依靠 rest on/upon
+        - Good governance <u>rests on</u> an understanding of... 良好的治理建立在对...的理解之上。
 - introduce
     - v. 介绍；引进
-    - The gardens of the homeless introduce from into an urban environment. 无家可归者的花园将人们引入城市环境
+    - The gardens of the homeless <u>introduce from into</u> an urban environment. 无家可归者的花园将人们引入城市环境
         - introduce sth. into 把...引进到
 - baby
 - dioxide
@@ -261,15 +264,17 @@
     - adv. 最后地
     - eventual adj. 最后的
 - flow
-    - flo-fla-flu 流
     - n. 流动，流量 vi. 流动
+    - flo-fla-flu 流
 - gender
-    - gen 产生, gene 基因
     - n. 性别
+    - gen- 产生
+        - gene 基因
 - healthy
     - adj. 健康的
     - health n. 健康
-    - wealth n. 财富, wealthy adj. 富有的
+    - wealth n. 财富
+        - wealthy adj. 富有的
 - himself
 - journalist
     - n. 记者
@@ -278,9 +283,9 @@
     - vt. 允许，让
     - 后加动词原型
 - nurse
-    - nur-培养
-        - nurture v. 培养
     - n. 护士
+    - nur- 培养
+        - nurture v. 培养
     - nursery n. 托儿所，保育室
 - street
     - n. 街道
@@ -322,7 +327,7 @@
     - wholehearted 全心全意的
 - highly
     - adv. 高度地，非常，很
-    - high  adj. 高的
+    - high adj. 高的
 - lie
     - vi. 躺；说谎
     - 在于 lie in/with
@@ -349,9 +354,9 @@
 - pace
     - n. 步伐；速度
     - keep pace with 与...保持一致
-        - This year's increase in rail passengers fares has kept pace with inflation. 今年铁路客运票价的上涨与通货膨胀保持同步
+        - This year's increase in rail passengers fares has <u>kept pace with</u> inflation. 今年铁路客运票价的上涨与通货膨胀保持同步
     - pick pace 提速，加速
-        - Human evolution picked pace in the last 30000 years.
+        - Human evolution <u>picked pace</u> in the last 30000 years.
 - seven
 - sleep
     - v. 睡眠
@@ -388,7 +393,7 @@
     - see vs watch
         - see 强调看到的结果
         - watch 强调看的过程
-    - watcher  n. ...观察家
+    - watcher n. ...观察家
         - star watcher 明星观众
 - wonder
     - v. 对...感到疑惑； n. 惊异；奇迹
