--- a/postgraduate/word/simple-word/markdown/p24-p26.md
+++ b/postgraduate/word/simple-word/markdown/p24-p26.md
@@ -1,6 +1,6 @@
-# p24-p26
+# P24-P26
 
-- aeroplane/**airplane**
+- **airplane**/aeroplane
     - n. 飞机
 - beat
     - vt. 打；击；打败； vi. 跳动； n. 跳动；节拍
@@ -8,10 +8,11 @@
         - It's easy to beat plastic.
     - n. 跳动
         - Listening through earphones to the same monotonous beats.
+    - meat n. 肉
 - peculiar
     - adj. 特有的，独特的；奇怪的，古怪的
     - peculiar to sth 某物所特有的
-        - the geographic conditions peculiar to America.
+        - the geographic conditions <u>peculiar to America</u>.
 - sudden
 - pen
 - strongly
@@ -22,7 +23,7 @@
     - n. 公园；停车场；vt. 停车
 - map
     - n. 地图；vt. 绘制地图
-    - The researchers mapped the city's vast areas.
+    - The researchers mapped the city's vast(广阔的) areas.
 - deeply
     - adv. 很；非常；极其（表示强调）
     - Beethoven was a deeply political man...
@@ -31,29 +32,36 @@
     - 英尺
         - Wilt Chamberlain was one of the only three players in NBA listed at over seven feet.
 - pack
-    - n. 包裹；一群（a pack of）； v. 打包；塞满
+    - n. 包裹；一群(a pack of)； v. 打包；塞满
     - 塞满
         - More people are trying to overpack their carry-on bags.
-    - package n. 包裹；包装；一揽子交易（或计划）； vt. 打包；包装（外包装）
+    - package n. 包裹；包装；一揽子交易（或计划）； vt. 打包；包装（）
         - a pack of deal 一揽子交易
         - a pack of plan 一揽子计划
         - 包装
             - Tea of different brands are packed with well-designed paper.
+        - 包装 pack vs package
+            - package 外包装
+            - pack 包装这个动作
 - hug
     - vt. 拥抱
     - hug-hugged-hugged-hugging
+    - huge adj. 巨大的
 - ground
-    - n. 地面（外面的）；土地；**根据，依据**
-    - floor（屋内、平整的地面）
+    - n. 地面；土地；**根据，依据**
+    - floor vs ground
+        - floor 屋内、平整的地面
+        - ground 外面的
     - 根据，依据
-        - There are few places where clients have more grounds for complaint than America.
+        - There are few places where clients have more grounds for complaint than America. 很少有地方比美国更让客户有理由抱怨
         - 否定加比较级表示最高级
-    - groundless  adj. 毫无根据的
+    - groundless adj. 毫无根据的
 - dozen
+    - n. 打
 - fifty
 - seldom
     - adv. 很少，不常
-    - Public-sector unions seldom get in trouble for their actions.
+    - Public-sector(部门) unions(工会) seldom get in trouble for their actions.
 - skilled
     - adj. 熟练的，有技能的
 - childhood
@@ -62,27 +70,29 @@
     - adv. 在旁边；并排的
 - tight
     - adj. 紧紧的；牢固的；（时间、经费等）紧的
+    - tie-tight
     - a tight knot 紧的结
     - a tight budget 紧张的预算
     - tighten v. 变紧，更加牢固
-        - tighten the belt 节衣缩食
+        - tighten the belt(腰带) == belt-tightening 节衣缩食
     - tightly adv. 紧紧地，牢固地
 - silver
     - n. 银器；银；银币
-    - sliver lining 一线希望
+    - **sliver lining** 一线希望
 - rear
     - n. 背部，后面 adj. 后部的背后的； vt. 抚养；饲养
     - 后方的
-        - Even the Volkswagen（大众汽车）rear engine car was anticipated（预测）.
+        - Even the Volkswagen(大众汽车) rear engine car was anticipated(预测).
     - 抚养
-        - Celebrity moms have influenced our attitude towards child rearing.
+        - Celebrity(名人) moms have influenced(受影响) our attitude towards child rearing. 名人妈妈们影响了我们对育儿的看法
 - wood
     - n. 木材，木料；（pl. woods）树林
 - folk
-    -  n. 民族，人民；adj. 民间的
+    - n. 民族，人民；adj. 民间的
+    - fork n. 叉子
 - friendship
     - n. 友谊，友好
-    - leadership 领导力
+    - leadership n. 领导
     - partnership 合伙关系
 - wildlife
     - n. 野生动物
@@ -94,21 +104,24 @@
 - anywhere
 - branch
     - n. 树枝；分支；分流
-    - There are two separate and hostile branches.
+    - br- == bur- 燃烧
+    - There are two separate(分离的) and hostile(敌对的) branches.
 - sugar
     - n. 糖；（食用糖）；vt. 在...中加糖
-    - candy 糖果
+    - candy n. 糖果
 - fellow
     - n. 同伙，同事；会员； adj. 同伴的，同事的
     - Rats can send out warning message to their fellow.
 - miss
-    - miss 词根：送
     - n. 小姐； vt. **想念；错过；漏掉**
+    - miss- 送
 - station
+    - n. 车站
+    - sta- 站
 - causal
-    - cas/aid- 落下
     - adj. 不经意的，非正式的；偶然的
-    - ...away from casual interactions with strangers...
+    - cas- == aid- 落下
+    - ...away from casual interactions(n. 相互作用) with strangers(n. 陌生人)...
 - copy
     - n. 副本； vt. 模仿，效仿；复印
 - skin
@@ -116,8 +129,10 @@
 - townsfolk
     - n. 镇民，市民
 - journey
-    - n. 旅行，行程（与记录有关）
-    - travel （长途旅行）
+    - n. 旅行，行程
+    - travel vs journey
+        - travel 长途旅行
+        - journey 与记录有关
 - celebrate
     - v. 庆祝
     - We went out to a restaurant to celebrate.
@@ -128,12 +143,12 @@
 - false
     - adj. 错误的；虚伪的；不实的
     - falsely adv. 错误地，不实地
-- frequently
+- frequent
     - adj. 经常发生的
     - frequency n. 频率
 - admire
     - vt. 钦佩，羡慕；称赞，夸奖（同辈）
-    - I admire him for his frequent Chinese.
+    - I admire him for his <u>frequent Chinese(流利的中文)</u>.
 - apple
     - n. 苹果；苹果树
     - Adam's apple 喉结
@@ -142,7 +157,7 @@
 - holiday
     - n. 假期；假日
 - heaven
-    - n. 天堂；（pl. ）天空；乐事
+    - n. 天堂；(pl.)天空；乐事
     - Europe is not a gender-equality heaven.
 - belt
     - n. 腰带；皮带；地带；地区
@@ -150,7 +165,7 @@
     - safety belt 安全带
     - conveyor belt 传送带
     - 地带
-        - Hill's pressure later led to the creation of National parks and green belts.（绿化带）
+        - Hill's pressure later led to the creation of National parks and green belts(绿化带). Hill 的施压后来促成了国家公园和绿化带的建立
 - careful
 - landowner
     - n. 土地拥有者；地主
@@ -159,11 +174,11 @@
 - window
     - n. 窗户，窗口
 - tone
-    - "频率" n. **语气；音调**，声调；色调；**（肌肉）张力**； v. 增强（tone up）
+    - "频率" => n. **语气；音调**，声调；色调；**（肌肉）张力**； v. 增强（tone up）
     - 语气，语调
-        - softened his tone and adopted some new policy.
+        - softened(软化) his tone and adopted(采用) some new policy.
     - 张力
-        - decreasing muscle tone
+        - decreasing muscle(肌肉) tone
 - proud
     - adj. 骄傲的，傲慢的
     - be proud of 对...感到骄傲
@@ -171,50 +186,62 @@
 - pure
     - n. 纯的，纯洁的；纯净的；抽象的；完全的，十足的
     - 完全的
-        - The idea is pure lobby（游说）talk.
+        - The idea is pure lobby(游说) talk.
     - purely adv. 完全地，纯粹地
 - hormone
     - n. 荷尔蒙
 - comfort
     - n. 舒适；安慰 vt. 使舒适；安慰
+    - comfortable adj. 舒适的
 - teenager
     - n. 青少年
     - teenage adj. 青少年的，十几岁的
 - during
     - prep. 在...期间
+    - +一段时间
+        - during 1990
+        - ~~during 5:00~~
+        - at 5:00
+    - dur- 时间
+        - durable
+        - endure
 - June
 - stream
     - n. 小溪，溪流
-    - The tourist streams are not entirely separate.
+    - The tourist(游客) streams are not entirely separate(分离).
 - previous
     - adj. 先前的，以往的
-    - According to Paragraph 1，most previous surveys found that home
+    - According to Paragraph 1，most previous surveys(调查) found that home
     - previously adv. 事先；以前
 - actively
     - adv. 活跃地
+    - active adj. 积极的
 - tooth
-    - n. 牙，齿（pl. ）teeth
+    - n. 牙，齿（pl. teeth）
 - index
-    - n. （pl. indexes，indices）索引；标志；指数（统计学）
-    - indicate 表示出
+    - n. （pl. indexes，indices）索引；**标志**；**指数（统计学）**
+    - indicate v. 表明，表示出
     - 指数
-        - Obesity is often defined by body mass index or BMI.
+        - Obesity(肥胖) is often defined by body mass index or BMI.
 - readily
     - adj. 乐意的，欣然的
     - 乐意的
         - They share their food readily.
     - 容易的
-        - Loans willbe readily available to rich countries.
+        - Loans will be readily available(adj. 可用的) to rich countries.
 - wife
     - n. 妻子
     - midwife 助产士
     - housewife 家庭主妇
 - salary
-    - n. 薪水，薪金（长期）
-    - wage （短期）薪水
+    - n. 薪水，薪金
+    - 薪水: wage vs salary
+        - wage 短期
+        - salary 长期
 - defend
-    - vt. 防卫，**保护；保卫**；为... 辩护
-    - Without the ability to defend their ideas，they cannot fully participate in our democracy.（民主）
+    - vt. 防卫，**保护；保卫**；为...辩护
+    - Without the ability to defend their ideas，they cannot fully participate(参加) in our democracy(民主).
+      如果没有捍卫自己观点的能力，他们就不能在我们的民主制度中充分参与
     - defender n. 守卫；后卫
     - defendant n. 被告
 - legally
@@ -230,11 +257,11 @@
     - n. 体温；温度
     - take one's temperature 量体温
     - temper v. 使缓和，使调和； n. 脾气
-        - Egalitarian sentiments（平等感）were often tempered by fears.
-    - temporary adj. 暂时的
+        - Egalitarian(平等主义者) sentiments(平等感) were often tempered by fears. 平等主义的情感常常被恐惧所抑制
+    - temporary adj. 暂时的，临时的
 - socially
     - adv. 社会上地；善于交际的
-    - soc-联合
+    - soc- 联合
     - social adj. 社会的，社交的
 - pleasant
     - adj. 令人愉快的；可喜的
@@ -248,9 +275,11 @@
     - mild adj. 温和的
 - mobile
     - n. 移动电话； adj. 非固定的
+    - mov- == mob- == mot- 移动
 - flash
     - vi./n. 闪光，闪现
-    - Subjects（实验对象）（exposed to fast-food flashes）also tend to think a muscle piece lasts too long.
+    - Subjects(实验对象) (exposed to fast-food flashes) also <u>tend to(倾向于)</u> think a musical piece lasts too
+      long. 实验对象在接触快餐画面后，也倾向于觉得一首音乐持续得太久
 - everywhere
     - adv. 各处，任何地方
 - hotel
@@ -259,18 +288,21 @@
     - adv. 以前；从前
     - Formerly it lasted three days...
     - former adj. 以前的，从前的
+        - fore- 在...之前
+            - before prep.
 - tiny
     - adj. 极小的，微小的
 - borrow
     - vt. 借，借入
     - lend 借出
 - volume
-    - vol-卷，轴
-        - involve v. 涉及，卷入
     - n. 卷，册，书卷；体积，容量；响度
+    - vol- 卷，轴
+        - **involve** v. 涉及，卷入
     - a two-volume report 两卷报道
     - n. 量
-        - The IT industry（信息技术产业） produces about the same volume of greenhouse gases as the world's airlines（航空业） do.
+        - <u>The IT industry(信息技术产业)</u> produces about <u>the same</u> volume of greenhouse gases <u>as</u> the
+          world's airlines(航空业) do.
             - the same as 和...一样
     - 音量
         - Beethoven's habit of increasing the volume.
@@ -278,14 +310,14 @@
     - adj. 令人不快的，不舒服的
 - acre
     - n. 英亩
-    - California's plans treat 35000 acres of forecast a year by 2020...
+    - California's plans treat(处理) 35000 acres of forecast a year by 2020...
 - morning
 - ticket
     - n. 票，入场券；候选人名单
 - climb
     - vi./n. 攀爬，上升，增长； vt. 攀爬
     - 上升
-        - This year，that 付尼姑热 climbed to 61%.
+        - This year，that figure climbed to 61%.
 - dress
     - n. 连衣裙；vi. 穿衣； vt. 给...穿衣；装饰
     - overdress v. 穿的太讲究；n. 外衣
@@ -303,37 +335,40 @@
     - 招致
         - I'm afraid this spell trouble！
     - 一段时间
-        - bringing prominence（名声）for a spell
+        - bringing prominence(名声) for a spell
 - wheel
     - n. **轮，车轮**；vt. 推，拉；vi. 转动，旋转
     - ferries wheel 摩天轮
     - wheelchair 轮椅
     - 轮子
-        - Rates can be scared by a plastic box on wheels.
+        - Rates can be scared(害怕的) by a plastic box on wheels.
 - wildfire
     - n. 野火
 - lab/laboratory
     - n. 实验室
+    - lab- 在
 - excuse
     - vt. 原谅；为...辩解； n. 借口，辩解
     - n. 借口
-        - ...cloaking his exit in the usual vague excuses
+        - ...cloaking(遮掩) his exit in the usual vague(模糊的) excuses
     - 为...辩解
-        - People in large cities tend to excuse criminals.
+        - People in large cities <u>tend to(往往)</u> excuse criminals(罪犯).
 - location
     - n. 位置，场所
-    - local 当地的
+    - loc- 位置
+        - local 当地的
 - fan
     - n. **狂热爱好者，迷**； 扇子vt. **煽动，扇**；
     - 煽动
-        - Favoritism（偏袒） in official access can fan public perceptions（看法） of corruption（腐败）.
+        - Favoritism(偏袒) in official(官方的) access can fan public perceptions(看法) of corruption(腐败).
+          官方渠道上的偏袒会加剧公众对腐败的印象
 - sad
     - adj. 悲伤的
     - sadness n. 悲伤；悲痛
-    - sadly adv. 令人遗憾；不行地
+    - sadly adv. 令人遗憾；不幸地
 - wing
-    - n.翼（建筑物），翅膀
-    - The building slowly rose wing by wing.
+    - n. 翼（建筑物），翅膀
+    - The building slowly rose wing by wing. 这栋建筑逐渐建成，一翼一翼地加上去
 - fee
     - n. 费用
 - farmer
@@ -345,31 +380,36 @@
     - n. 样本，式样；
     - 考在完形填空中往往是正确选项
 - correctly
+    - adv. 正确地
 - publicly
     - adv. 公开地
+    - publ- 公众
+        - publish 出版
     - public adj. 平民的，大众的；n. 平民，大众，公众
         - public transportation 公共交通
-        - Men tend to talk more in public than women.
-    - publish 出版
+        - Men <u>tend to(往往)</u> talk more in public than women.
 - colony
-    - col=cul-培养
     - n. 殖民地，聚民区
-    - Spanish colonies hadbeen established in Mexico.
+    - col- == cul- 培养
+        - culture n. 文化
+    - Spanish(西班牙人) colonies had been established in Mexico.
 - ship
     - n. 船； vt. 用船运运送，装运
     - 运送
         - If a business was shipping a customer's purchase to a state...
 - vice
     - n. 缺点，弱点；邪恶；道德败坏
-    - Idleness is not just a vacation， an indulgence（沉溺） or a vice.
+    - Idleness(懒惰) is not just a vacation, an indulgence(沉溺) or a vice.
 - visa
     - n. 签证
+    - vis- 看
+        - visit
 - exam
     - n. 考试，测验
     - examination n. 考试，测验
 - army
     - n. 军队，大批
-    - But creating a future army of coders（编码）is not the sole purpose of the classes.
+    - But creating a future army of coders(编码) is not the sole(唯一) purpose(目的) of the classes.
     - arm v. 武装
 - color/colour
     - n. 颜色
@@ -378,14 +418,15 @@
     - n. 灵魂
     - soul mate 灵魂伴侣
 - cloud
-    - n. 云，一团； vt. 使模糊；破坏，使..蒙上阴影
-    - 使..蒙上阴影
-        - ...letting vague pronouncements cloud their reputations.
+    - n. 云，一团； vt. 使模糊；破坏，使...蒙上阴影
+    - 使...蒙上阴影
+        - ...letting vague(模糊的) pronouncements(宣言) cloud their reputations(声誉).
 - forth
     - adv. 向前，向外
-    - **forward**
-    - Students are expected to bring forth innovative computer technologies.
+    - fore- 向前，向外
+        - **forward** == forth
+    - Students are expected to bring forth innovative(创新的) computer technologies.
 - fresh
     - adj. 新鲜的；新颖的
-    - Eat plenty of fresh fruit and vegetables.
+    - Eat plenty(很多) of fresh fruit and vegetables.
 - eight
