--- a/postgraduate/word/simple-word/markdown/p27-p29.md
+++ b/postgraduate/word/simple-word/markdown/p27-p29.md
@@ -1,16 +1,16 @@
 # p27-p29
 
 - trail
-    - tra- 拖着
     - vi. （被）拖； vt. 跟踪，追踪； n. **小径；痕迹**
+    - tra- 拖着
     - 痕迹
         - The use of electronic means of payment leaves an electronic trail.
 - coach
     - n. **教练**；长途汽车； vt. **训练，指导**
     - n. 教练
         - I'm a coach，and you're my team，and we're in this together.
-    - vt. 
-        - ...to coach lawyers on the shifting landscape for patents.
+    - vt.
+        - ...to coach lawyers on the shifting(转移) landscape for patents(专利). 指导律师们应对不断变化的专利领域
 - theater
     - n. 戏剧，剧院
     - The professional companies prospered in their permanent theaters.
@@ -27,21 +27,25 @@
     - distasteful adj. 令人讨厌的，令人厌恶的
         - Accepting favors in return for opening doors is "distasteful".
 - via
-    - prep. 经由 = by
-    - The current immigration system in the US has been fixed via political means.
+    - prep. 经由 == by
+    - The current immigration(移民) system in the US has been fixed via political means(方法).
 - vocabulary
     - n. 词汇量
+    - voc- 说
 - rude
-    - adj. 粗鲁的，不礼貌的（定性）
-    - crude adj. 粗鲁的，粗糙的；（行为） n. 原油，石油
+    - adj. 粗鲁的，不礼貌的
+    - crude adj. 粗鲁的，粗糙的； n. 原油，石油
+    - rude vs crude
+        - rude 定性
+        - crude 行为
+        - He is a rude man，because his behavior is crude.
     - 原油
         - the price of crude oil
-    - He is a rude man，because his behavior is crude.
 - block
     - n. 大楼；街区；障碍物； vt. 堵塞；阻碍
     - it is a block of sugar.
     - 街区
-        - EU remains the world's largest trading block.
+        - EU remains(依旧是) the world's largest <u>trading block(贸易集团、贸易体)</u>.
     - 堵塞；阻碍
         - Some Congress members are trying to block the plan.
 - twelve
@@ -50,62 +54,72 @@
     - n. 走廊；画廊，美术馆
 - shut
     - v. 关，闭
-    - shut out 把... 拒之门外
-        - ...shut out the feverish fashion world
+    - shut out 把...拒之门外
+        - ...<u>shut out</u> the feverish(狂热的、极度兴奋的) fashion world 把那个狂热的时尚世界关在门外
     - shut down 闭店，关门
-        - As much of Mexico City shut down at the height of a panic...
+        - As much of Mexico City <u>shut down</u> at the height of a panic(恐慌)...
     - shut up 闭嘴
-        - We are shut up in schools.
+        - We are <u>shut up</u> in schools.
 - truck
     - n. 卡车
+    - tra- == tru- 拖着
 - linguist
     - n. 语言学家；通晓数国语言的人
-    - bilingual adj. 双语的
+    - lingu- 语言
+        - bilingual adj. 双语的
 - goods
-    - n. 商品（高质量）；货物
-    - commodity 商品（批量生产的）
+    - n. 商品；货物
+    - commodity 商品
+    - commodity vs goods
+        - commodity 批量生产的
+        - goods 高质量
 - maybe
     - adv. 大概，也许
     - may 情态动词
 - weekly
     - adj./adv. 每周一次地；
 - library
+    - n 图书馆
 - automobile/auto
-    - auto- 自动
     - n. 汽车
-    - motor/car/vehicle（高级）   汽车
-    - Rules require auto companies to bring their vehicles into compliant.
+    - auto- 自动
+    - motor/car/**vehicle** 汽车
+        - Rules require auto companies to <u>bring</u> their vehicles <u>into compliance</u>. 法规要求汽车公司使他们的车辆符合法规要求
+            - bring...into compliance 使...符合（规定、标准、法规）
 - alcohol
     - n. 酒精；含酒精的饮料
 - route
     - n. 路线，路程
     - Think about diving a route that's very familiar.
     - routine n. 常规，惯例
-        - Corporations could use to introduce new routines.
 - childless
     - adj. 没有子女的
 - insect
     - n. 昆虫，虫
+    - sect- 切
+        - section n. 章节
 - mankind
     - n. 人类
 - cast
     - vt. **投射；扔，投掷**；n. **投，抛**；铸型
-    - casting a wistful（智慧的） glance
-    - 词根：投
+    - casting a wistful(智慧的) glance
+    - cast- 投
 - tag
     - n. 标签，品牌； vt. 给...加标签
     - price tag 价签
     - 给...加标签
-        - Tagging environmentalists as "anti-science" is justifiable（正当的）.
+        - Tagging environmentalists(环保主义者) as "anti-science(反科学)" is justifiable(正当的).
 - badly
     - adv. 坏，差；严重的；有害的
-    - 与需要连用时翻译成迫切需要
+    - 与需要连用时翻译成**迫切需要**
         - Such a trend is badly needed.
 - passive
     - adj. 被动的，消极的
+    - pass- 感情
 - motive
     - n. 动机，目的
-    - Such measures[ˈmeʒər] have a couple of uplifting motives.
+    - mot- 动
+    - Such measures[ˈmeʒər] have a couple of uplifting(令人振奋) motives.
     - motivated v. 刺激
         - Students are hardly motivated by monthly goals.
 - taxpayer
@@ -117,12 +131,15 @@
     - vt. 战胜，克服
     - overcome-overcame-overcome
 - listen
-    - vi. 听，听从（注重动作）
-    - hear 听到（注重结果）
+    - vi. 听，听从
+    - 听到 hear vs listen
+        - hear 注重结果
+        - listen 注重动作
 - bright
     - adj. **明亮的**；鲜艳的；聪明的；有希望的
 - pioneer
     - n. **先驱者，创始人**；vt. 开拓
+    - pion- == pin- 针
 - mouth
     - n. 口，嘴巴
     - mouse 老鼠
@@ -131,12 +148,12 @@
     - adv. 惊人地
 - punish
     - vt. 惩罚，处罚
-    - Some people were to be punished by imprisonment or even death.
+    - Some people were to be punished by imprisonment(监禁) or even death.
 - cartoon
     - n. 漫画；动画片
 - praise
     - n./vt. 赞美，称赞
-        - Japanese education is praised for helping the young climb the social ladder.
+        - Japanese education is praised for helping the young climb the social ladder(阶梯).
     - raise 举起，提升
 - slightly
     - adv. 略微；稍微
@@ -148,12 +165,16 @@
     - picture 图画，照片
 - instrument
     - n. 仪器，器械，工具；乐器
+    - stru- 建造
+        - structure n. 结构
+        - construct v. 构造
     - 仪器
-        - Hot spots  provide the measureing instruments.
+        - Hot spots provide the measuring instruments.
     - 乐器
-        - classical instruments
+        - classical instruments 古典乐器
 - valley
     - n. 山谷，溪谷
+    - Silicon Valley 硅谷
 - fold
     - n. 褶皱； v. 折叠
     - unfold v. 展开，打开
@@ -163,8 +184,8 @@
     - epidemic adj. 流行的；n. 流感
 - nose
 - surgery
-    - sur- 在..之上
     - n. 外科，外科手术
+    - sur- 在..之上
     - surgeon n. 外科医生
 - dose
     - n. 剂量，一剂；一份
@@ -172,11 +193,12 @@
     - dot 点
 - span
     - n. 一段时间；跨度
-        - His digit span had risen from 7 to 20.
+    - His digit span had risen from 7 to 20.
     - expand v. 扩大；增加
 - deem
-    - vt. 认为，视为 ~ think ~ consider
-    - Mauna Kea is deemed as an ideal astronomical site.
+    - vt. 认为，视为
+    - 视为: deem == think == consider
+    - Mauna Kea is deemed as an ideal astronomical(天文) site.
 - costly
     - adj. 昂贵的，代价高的
     - cost n. 成本，v. 花费
@@ -189,7 +211,7 @@
 - doom
     - vt. 命定，注定； n. 厄运，劫数
     - 厄运
-        - Policymakers could avoid the forecasted doom and may even see progress.
+        - Policymakers could avoid the forecasted(预测) doom and may even see progress. 政策制定者可能避免预测中的厄运，甚至还能看到进展
     - mood n. 心情，情绪
 - sacrifice
     - n./vt. 牺牲；献祭
@@ -198,12 +220,13 @@
     - It never rains but it pours. 祸不单行
     - 全身心投入
         - Imagining you are pouring your heart out to someone.
-    - 全身倾注
-        - They spend the night pouring cash into the hotels and restaurants.
+    - They spend the night <u>pouring cash into(投入大量资金到某个项目、产业或地方)</u> the hotels and restaurants.
+      他们整晚把钱花在酒店和餐馆上
 - doubtful
-    - dou- 两个
     - adj. 拿不定主意的，不确定的；怀疑的
-    - doubtful n. 怀疑
+    - dou- 两个
+        - double
+    - doubt n. 怀疑
     - 出现在阅读题的作者态度题中是必错选项
 - disaster
     - n. 灾难，大祸
@@ -214,25 +237,25 @@
 - worthy
     - adj. 值得的（worthy of）；值得尊敬的
     - worth n. 价值，意义； adj. 值得的
-        - be worth doing 值得做sth.
-            - It is worth making an important distinction.
+        - be worth doing sth. 值得做sth.
+            - It <u>is worth making</u> an important distinction(区别).
     - worthless adj. 没用的，无价值的
 - newsroom
     - n. 新闻编辑室
 - blow
     - v. **吹；吹气**；爆炸； n. **打击**
     - 吹气
-        - What happens when the wind doesn't blow the sun dosen't shine？
+        - What happens when the wind doesn't blow or the sun doesn't shine？
     - 打击
-        - ...avoiding a blow to their reputations...
+        - ...avoiding(避免) a blow to their reputations(声誉)...
 - arm
     - n. 手臂，扶手；（pl.）武器； vt. 装备
     - 武装
-        - He used the weapons to arm his men.
+        - He used the weapons(武器) to arm his men.
 - phase
     - n. 阶段，时期；
-    - = period 时期
-    - in this overwhelming significant phase
+    - phase == period 时期
+    - in this overwhelming(极大的、巨大的、压倒性的) significant(重要的) phase
 - shame
     - n. 羞耻；可耻的人或事
     - It would be a shame to raise prices too much.
@@ -240,42 +263,45 @@
 - favorite/favourite
     - adj. 特别喜爱的 n. 偏袒；特别喜爱的人或事
     - 偏袒 play favorites
-        - Official must not be allowed to play favorites in providing information...
+        - Official must not be allowed to <u>play favorites</u> in providing information...
 - supermarket
 - bold
     - adj. **勇敢的；鲁莽的**；黑体的
-    - ... bold imagination and scientific accuracy.
+    - ...bold imagination and scientific accuracy(准确性).
 - steadily
     - adv. 稳定地；稳固地
     - steady adj. 稳定的；持续的
-        - Its funding has enjoyed a steady increase.
+        - Its funding(资金) has enjoyed a steady increase.
+        - ste- == sta- 站
 - theme
     - n. 题目；主题
-    - There are a number of consistent themes.
+    - There are a number of consistent(一致的、始终如一的) themes.
 - row
     - n. **排，行**；v./n. 划船
-    - the troublemakers in the back row
+    - the troublemakers(麻烦制造者) in the back row
 - band
     - n. **乐队；带**；vt. 用带绑扎
     - band-aid 邦迪创可贴；临时补救
 - solely
-    - sol- 太阳
     - adv. 仅；只；唯；单独地
-    - Few Americans Attribute this solely to such obvious causes.
+    - sol- 太阳，独自
+        - solar adj. 太阳的
+    - Few Americans <u>attribute</u> this solely <u>to</u> such obvious causes. 很少有美国人把这完全归因于如此明显的原因
+        - attribute...to... 把...归因于...
 - inner
     - adj. 内部的，核心的
 - paycheck
     - n. 付薪水的支票；薪水
 - specify
-    - spect/spec- 看
     - vt. 具体说明；具体指定
+    - spect- == spec- 看
     - ...specifying the details of the project.
     - **specific** adj. 具体的；特定的
 - tighten
     - v. 使变紧
 - jam
     - n. **拥挤，堵塞；果酱** v. 将...塞入
-    - traffic jam 交通拥堵
+    - **traffic jam** 交通拥堵
     - strawberry jam 草莓果酱
     - 将...塞入
         - He jammed the boxes into the back of the car.
@@ -284,24 +310,23 @@
 - environmentalist
     - n. 环境保护论者
     - environment n. 环境
+        - viron- 圈，环
         - social environment
         - living environment
-    - viron- 圈，环
     - environmental adj. 环境的
 - quiet
     - adj. 安静的；n. 安静
     - quick adj. 迅速的
-    - quite adv. 非常，相当=very
+    - quite adv. 非常，相当 == very
 - headline
     - n. 标题，大字标题
 - plenty
     - n. 丰富，大量
-    - plenty of 大量的+可数n. /不可数n.
-    - plenty of + 不可数n.
-        - There's plenty of incentive to ditch print.
-    - plenty of + 可数n.
-        - Plenty of other species are able to learn.
-    - ple/plen/plet/pli = full/fill 满，填满
+    - ple- == plen- == plet- == pli- == full/fill 满，填满
+        - complete
+    - plenty of 大量的 + 可数n./不可数n.
+        - There's plenty of incentive(不可数n.) to ditch print.
+        - Plenty of other species(可数n.) are able to learn.
 - wash
     - vt. 洗
 - worldwide
@@ -309,10 +334,11 @@
 - mentally
     - adv. 精神上；智力上；思想上
     - mental adj. 精神的；智力的；思想的
+        - ment- == mind- 想
         - mental health 心理健康
-- indifferent 
+- indifferent
     - adj. 漠不关心的；冷漠的
-    - 如果出现在阅读题作者态度题中是必错选项
+    - 如果出现在<u>阅读题作者态度</u>题中是必错选项
 - cigarette/cigaret
     - n. 香烟，卷烟
 - surely
@@ -323,7 +349,8 @@
     - n. 虫；蠕虫
 - shopper
 - video
-    - n. 录像，录像机；收音机
+    - n. 录像，录像机
+    - radio 收音机
 - prison
     - n. 监狱
     - imprison n. 囚禁
@@ -333,70 +360,82 @@
     - White House 白宫
 - straight
     - adj. 直的，正直的； adv. 直接的
-    - His explanation was surprisingly straight up.
+    - str- 长长的
+        - street
+    - His explanation(解释) was surprisingly straight up.
 - misery
     - n. 痛苦，苦难（消极）
     - miss 错过，想念
 - till
     - prep. 直到
+    - until
 - snow
 - globe
     - n. 地球；世界；地球仪；球体
     - **world** 地球
-    - globally adv.  全球地
+    - global adj. 全球的
+    - globally adv. 全球地
     - globalization n. 全球化
 - navy
     - n. 海军
-    - navigate v. 遨游，航线
+    - nav- 船
+        - navigate v. 遨游，航线
 - Thursday
 - similarly
     - adv. 相似地；类似地
     - similar adj. 相似的，类似的
         - be similar to 类似于
-        - The bills are similar to a measure[ˈmeʒər] recently adopted in California.
+        - The bills(法案) <u>are similar to</u> a measure[ˈmeʒər] recently adopted(采纳) in California. 这些法案与加州最近采纳的一项措施相似
     - similarity n. 相似，类似
 - bottle
     - n. 瓶子
 - rock
     - n. **岩石；摇滚乐**； v. 摇；摇动
-    - identifying a distinctive rock or tree
+    - identifying(识别) a distinctive(独特的) rock or tree
     - rock and roll 摇滚
 - door
 - campus
     - n. 校园
-    - school 学校
+    - school n. 学校
 - lest
-    - conj. 唯恐，免得 = for fear that = in case（在完形填空中一般是错误选项）
-    - They should be quick to respond to letters to the editor，lest animals rights misinformation go unchallenged.
+    - conj. 唯恐，免得
+    - lest == for fear that == in case
+        - 在完形填空中一般是错误选项
+    - They should be quick to respond to letters to the editor，lest animals rights misinformation(误传) go unchallenged.
+      他们应该迅速回复给编辑的来信，以免动物权利方面的错误信息无人质疑
 - chicken
     - n. 小鸡，肌肉
-    - hen 母鸡
-    - cock 公鸡
+    - hen n. 母鸡
+    - cock n. 公鸡
 - fierce
     - adj. 凶猛的；猛烈的；狂暴的
     - fierce competition 激烈的竞争
 - joy
     - n. 喜悦，乐事
-    - enjoy 享受
+    - enjoy v. 享受
     - joy City 大悦城
 - founder
     - n. 建立者
     - found v. 建立；创建
-        - A new kind of philosophy （founded in reason）was born.
+        - A new kind of philosophy(哲学) (founded in reason(理性)) was born.
+        - find-found
     - foundation n. 建立，基金会
 - mirror
     - n. 镜子； vt. 反映，反射
+    - mir- 惊奇
+        - admire v. 钦佩
+        - miracle n. 奇迹
 - myth
-    - n. 深化
-    - They perpetuate the myth of the lone genius.
+    - n. 神话
+    - <u>They perpetuate(他们使...延续/维持/长久存在)</u> the myth of the lone genius.
 - cotton
     - n. 棉花；棉线
-    - Adam Davidson relates a joke from cotton country.
-        - cotton country 美国
+    - Adam Davidson relates(叙述) a joke from <u>cotton country(美国)</u>.
 - unrealistic
     - adj. 不切实际的；不真实的
 - insecurity
     - n. 不安全，危险，不可控
-    - security n. 安全；安全工作 = safety
+    - security n. 安全；安全工作
+        - 安全 security == safety
         - safety and security
     - secure adj. 安全的
